fix deprecated URL constructor